tdf#102239 START CENTER: Cant activate template categories from split button

Change-Id: I6a426c3449dac1d36aa63c22108ac6105fafea12
Reviewed-on: https://gerrit.libreoffice.org/29294
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Tested-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>